# project-template

./: .pre-commit-config.yaml  README.md  mkdocs.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: mkdocs.yml  tests.yml
tests/: conftest.py  test_code-file.py  test_code_file.py
